Fixed overlapping footer

--- a/static/style.css
+++ b/static/style.css
@@ -194,7 +194,7 @@ maincontainer{
     background-color: black;
     color:red;
     height: 50px;
-    margin: -36px 31px 23px 2px;
+    margin: 30px 31px 23px 2px;
     width: 100%;
     padding: 20px 20px 20px 0px;
 }
